# webAssembly-bachelor

./: .gitignore  README.md  wasi_snapshot_preview1.command.wasm
backend/: Cargo.toml  build_and_run.sh  database.sqlite
backend/guest/src/: bindings.rs  lib.rs
backend/migrations/: 20240223151319_todos.sql
backend/src/: backup.rs  main.rs  sql_import.rs  tcp_import.rs
backend/wit/: backend.wit
esp-idf/: CMakeLists.txt  build_and_run.sh  sdkconfig.defaults.esp32
esp-idf/main/: CMakeLists.txt  main.c
esp-idf/main/c_arrays/: add.h  add_app.h  add_component.h  add_core.h  monitor.h  monitor_component.h  monitor_module.h  process_data.h  test_wasm.h  udp_client.h
esp-idf/main/esp/: board.c  board.h  build.sh  monitor-core.wasm  monitor.c
esp-idf/main/monitor_component/: CMakeLists.txt  board.c  build.sh  monitor.c  monitor.wit
esp-idf/main/monitor_module/: CMakeLists.txt  monitor_mod.c  monitor_mod.h
esp-idf/main/src/: esp_client.c  esp_client.h  fifo.c  fifo.h  sensors.c  sensors.h  wasm_helper_functions.c  wasm_helper_functions.h  wifi.c  wifi.h
esp-idf/main/wasm/: add.wasm  build_c_arrays.sh  get_c_arrays.sh  wasm_c_array.py  wasm_program.h
esp-idf/main/wasm/add/: CMakeLists.txt  add.c
esp-idf/main/wasm/client/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  client.c  client.h  cmake_install.cmake  udp_client.c
esp-idf/main/wasm/client/inc/: pthread.h
esp-idf/main/wasm/process_data/: CMakeLists.txt  process_data.c  process_data.h  process_data.wasm  wasm.c
frontend/: build-wit.sh  build_and_run.sh  frontend.wac  index.html  package-lock.json  package.json  rollup.config.mjs
frontend/client/: app.py  build.sh
frontend/host-webserver/: app.py  build.sh  webserver.wit
frontend/parser-go/: build.sh  go.mod  parser.go
frontend/parser-js/: build.sh  package-lock.json  package.json  parser.mjs
frontend/parser-js/wit/: parser.wit
frontend/parser-py/: app.py  build.sh
frontend/plotter/: build.sh  plotter.py
frontend/src/cowsay/: cowsay.js
frontend/src/http/: http.js  http.wit
frontend/src/plot/: plot.js  plot.wit
frontend/webserver/: app.py  build.sh  run.sh
frontend/webserver/webserver-rust/: Cargo.toml  index.html
frontend/webserver/webserver-rust/src/: main.rs
frontend/wit/: webserver.wit
memory-test/component-model/: add.wit
memory-test/component-model/c/: add.c  build.sh
memory-test/component-model/go/: add.go  build.sh
memory-test/component-model/javascript/: add.js  build.sh  package-lock.json  package.json
memory-test/component-model/python/: app.py  build.sh
memory-test/component-model/rust/: Cargo.toml  build.sh
memory-test/component-model/rust/src/: bindings.rs  lib.rs
memory-test/component-model/rust/wit/: world.wit
rust-wit/: wasi_snapshot_preview1.command.wasm
rust-wit/adder/: Cargo.toml  adder.wasm
rust-wit/adder/src/: bindings.rs  lib.rs
rust-wit/adder/wit/: adder.wit
rust-wit/app/: Cargo.toml  build_wit.sh  config.yml
rust-wit/app/src/: main.rs
rust-wit/app/wit/: app.wit
rust-wit/database/: Cargo.toml  build.sh  tcp_client.py
rust-wit/database/guest/: Cargo.toml
rust-wit/database/guest-component/: Cargo.toml
rust-wit/database/guest-component/src/: bindings.rs  lib.rs
rust-wit/database/guest/src/: lib.rs
rust-wit/database/src/: main.rs  sql_import.rs
rust-wit/database/wit/: database.wit  world.wit
rust-wit/server/: .gitignore  Cargo.toml
rust-wit/server/src/: bindings.rs  lib.rs
rust-wit/server/wit/: server.wit
rust-wit/wit/: backend.wit
wit-Interfaces/backend/: tcp_client.py
wit-Interfaces/backend/guest/src/: lib.rs
wit-Interfaces/backend/src/: sql_import.rs  tcp_import.rs
wit-Interfaces/backend/wit/: backend.wit  database.wit
wit-Interfaces/c_example/: add-app.wasm  build.sh
wit-Interfaces/c_example/add_run/: Cargo.toml
wit-Interfaces/c_example/add_run/src/: bindings.rs  main.rs
wit-Interfaces/c_example/add_run/wit/: add-run.wit
wit-Interfaces/c_example/lib-component/: add-component.wasm  add-core.wasm  add.c  build.sh  embed.wasm  example.c  example.h
wit-Interfaces/frontend/: compose.sh  print-components.sh
wit-Interfaces/frontend/client/: app.py  tcp.py
wit-Interfaces/frontend/client/tcp_client/: __init__.py
wit-Interfaces/frontend/client/tcp_client/exports/: __init__.py
wit-Interfaces/frontend/go-test/: add.component.wasm  add.embed.wasm  add.go  add.virt.wasm  add.wasm  build.sh  tcp_server_test.py
wit-Interfaces/frontend/host-webserver/: app.py  build.sh
wit-Interfaces/frontend/parser-go/: build.sh  parser.embed.wasm  parser.wasm
wit-Interfaces/frontend/python/example/: app.py
wit-Interfaces/frontend/python/example/hello_host/: __init__.py  intrinsics.py  root.core15.wasm  root.core16.wasm  root.core2.wasm  root.core20.wasm  root.core23.wasm  root.core25.wasm  root.core26.wasm  root.core3.wasm  root.core30.wasm  root.core34.wasm  root.core37.wasm  root.core38.wasm  root.core39.wasm  root.core4.wasm  root.core6.wasm
wit-Interfaces/frontend/python/frontend/: app.py  build.sh  tcp.py
wit-Interfaces/frontend/python/frontend/frontend_guest/frontend/: __init__.py
wit-Interfaces/frontend/python/frontend/frontend_guest/frontend/exports/: __init__.py
wit-Interfaces/frontend/python/frontend/wit/: frontend.wit
wit-Interfaces/frontend/webserver/: app.py  build.sh  host.py  index.html
wit-Interfaces/frontend/webserver/webserver/: __init__.py
wit-Interfaces/frontend/webserver/webserver/imports/: client.py  parse.py
wit-Interfaces/frontend/webserver/webserver_host/: __init__.py  intrinsics.py  root.core10.wasm  root.core16.wasm  root.core19.wasm  root.core2.wasm  root.core22.wasm  root.core23.wasm  root.core25.wasm  root.core26.wasm  root.core3.wasm  root.core31.wasm  root.core34.wasm  root.core37.wasm  root.core38.wasm  root.core39.wasm  root.core6.wasm  root.core9.wasm
wit-Interfaces/frontend/webserver/webserver_host/exports/: exports.py
wit-Interfaces/frontend/webserver/webserver_host/imports/: __init__.py  client.py  parse.py
wit-Interfaces/frontend/wit/: webserver.wit
(+24 files in other folders)
