[package]
name = "adder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
wit-bindgen-rt = "0.24.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:adder"

[package.metadata.component.target]
path = "./wit/adder.wit"
world = "adder"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"wasi:http" = { path = "../wit/deps/http" }
"wasi:clocks" = { path = "../wit/deps/clocks" }
"wasi:io" = { path = "../wit/deps/io" }
"wasi:random" = { path = "../wit/deps/random" }
"wasi:cli" = { path = "../wit/deps/cli" }
"wasi:filesystem" = { path = "../wit/deps/filesystem" }
"wasi:sockets" = { path = "../wit/deps/sockets" }

