[package]
name = "app"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "bachelor:backend"

[package.metadata.component.dependencies]

# Tell cargo where to find wit
[package.metadata.component.target]
path = "./wit/app.wit"
world = "app"

# Tell cargo where to find external WITs
[package.metadata.component.target.dependencies]
"backend:adder" = { path = "../adder/wit"}
"backend:server" = { path = "../server/wit"}
"wasi:http" = { path = "wit/deps/http" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:random" = { path = "wit/deps/random" }
"wasi:cli" = { path = "wit/deps/cli" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }
"wasi:sockets" = { path = "wit/deps/sockets" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bitflags = "2.5.0"
clap = { version = "4.5.4", features = ["derive"] }
wit-bindgen-rt = "0.24.0"
