workspace = { members = [ "guest"] }
[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[package.metadata.component.target]
path = "./wit"
world = "database"

[dependencies]
anyhow = "1.0.81"
async-trait = "0.1.79"
sqlx = { version = "0.7.4", features = ["sqlite"] }
tokio = { version = "1.37.0", features = [ "rt-multi-thread", "macros" ] }
wasmtime = "19.0.0"
wasmtime-wasi = "19.0.0"
wit-bindgen = "0.23.0"
wit-component = "0.202.0"

[package.metadata.component.target.dependencies]
"wasi:http" = { path = "wit/deps/http" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:random" = { path = "wit/deps/random" }
"wasi:cli" = { path = "wit/deps/cli" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }
"wasi:sockets" = { path = "wit/deps/sockets" }
