[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.5.0"
wit-bindgen-rt = "0.26.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component.target]
path = "../add.wit"
world = "example"

[package.metadata.component]
package = "component:rust"

[package.metadata.component.dependencies]
